--- a/.github/workflows/wf_setup.yaml
+++ b/.github/workflows/wf_setup.yaml
@@ -1,4 +1,4 @@
-name: Setup
+name: Test tools
 on:
   workflow_call:
     inputs:
@@ -24,16 +24,11 @@ on:
       fetch-depth:
         description: 'Number of commits to fetch. 0 indicates all history for all branches and tags'
         default: 1
-        required: false
+        required: false 
         type: number
       python-version-list:
         description: 'Python versions (stringified JSON array)'
         default: "[\"3.7\"]"
-        required: false
-        type: string
-      planemo-ci-action:
-        description: 'Version of the planemo ci action to use'
-        default: 'galaxyproject/planemo-ci-action@v1'
         required: false
         type: string
     secrets:
@@ -153,7 +148,7 @@ jobs:
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
-      uses: ${{ planemo-ci-action }}
+      uses: galaxyproject/planemo-ci-action@v1
       id: discover
       with:
         create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
