make reusable workflow use current version of the action
hoping that:

- tests in this repo will use the action of the PR branch
  (the workflow version ./ is used .. so hopefully also the
   action ./ is used)
- external callers will use the workflows with
  `galaxyproject/planemo-ci-action/.github/workflows/...@vX`
  and I hope that this also yields version X of the action

--- a/.github/workflows/wf_deploy.yaml
+++ b/.github/workflows/wf_deploy.yaml
@@ -49,7 +49,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ inputs.galaxy-head-sha }}_planemo_${{ steps.get-galaxy-sha.outputs.planemo-version }}
     - name: Deploy on testtoolshed
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: ./
       with:
         mode: deploy
         repository-list: ${{ inputs.repository-list }}
@@ -58,7 +58,7 @@ jobs:
         planemo-version: ${{ inputs.planemo-version }}
       continue-on-error: true
     - name: Deploy on toolshed
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: ./
       with:
         mode: deploy
         repository-list: ${{ inputs.repository-list }}
