--- a/.github/workflows/wf_test.yaml
+++ b/.github/workflows/wf_test.yaml
@@ -103,7 +103,7 @@ jobs:
     - name: Clean dotnet folder for space
       run: rm -Rf /usr/share/dotnet
     - name: Planemo test
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: ./
       id: test
       with:
         mode: test
@@ -149,7 +149,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ inputs.galaxy-head-sha }}_planemo_${{ steps.get-galaxy-sha.outputs.planemo-version }}
     - name: Combine outputs
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: ./
       id: combine
       with:
         mode: combine
@@ -182,7 +182,7 @@ jobs:
       run: |
         echo "${{ steps.combine.outputs.statistics }}"
     - name: Check outputs
-      uses: galaxyproject/planemo-ci-action@v1
+      uses: ./
       id: check
       with:
         mode: check
