--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -128,6 +128,7 @@ jobs:
       galaxy-head-sha: ${{ needs.setup-ci-tools.outputs.galaxy-head-sha }}
       commit-range: ${{ needs.setup-ci-tools.outputs.commit-range }}
       planemo-version: ${{ needs.setup-ci-tools.outputs.planemo-version }}
+      fail-level: error
 
   check-lint:
     name: Check linting results
