--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -121,6 +121,7 @@ jobs:
   lint:
     name: Lint
     needs: setup-ci-tools
+    continue-on-error: true
     uses: ./.github/workflows/wf_lint.yaml
     with:
       repository-list: ${{ needs.setup-ci-tools.outputs.repository-list }}
