--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -271,14 +271,14 @@ jobs:
         html-report: true
     - name: Check statistics
       run: |
-        if ! grep -q "3\s\+success" <<<$(echo ${{ steps.combine.outputs.statistics }}); then
+        if ! grep -q "3\s\+success" <<<$(echo "${{ steps.combine.outputs.statistics }}"); then
           echo "wrong statistics: expected 3 success";
-          echo ${{ steps.combine.outputs.statistics }};
+          echo "${{ steps.combine.outputs.statistics }}";
           exit 1;
         fi
-        if ! grep -q "1\s\+failure" <<<$(echo ${{ steps.combine.outputs.statistics }}); then
+        if ! grep -q "1\s\+failure" <<<$(echo "${{ steps.combine.outputs.statistics }}"); then
           echo "wrong statistics: expected 1 failure";
-          echo ${{ steps.combine.outputs.statistics }};
+          echo "${{ steps.combine.outputs.statistics }}";
           exit 1;
         fi
     - uses: actions/upload-artifact@v3
