temp install planemo from path

--- a/action.yml
+++ b/action.yml
@@ -112,7 +112,7 @@ runs:
     # Install the `wheel` package so that when installing other packages which
     # are not available as wheels, pip will build a wheel for them, which can be cached.
     - name: Install planemo
-      run: pip install wheel ${{ inputs.planemo-version }}
+      run: pip install git+https://github.com/bernt-matthias/planemo@linters-list
       shell: bash
     - name: Install jq
       run: sudo apt-get install jq
