--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -223,6 +223,7 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup-ci-workflows.outputs.chunk-count }}
+        galaxy-user-key: ${{ secrets.GALAXY_USER_KEY }}
     - name: 2nd run test workflows
       uses: ./
       id: test-workflows-2
