--- a/action.yml
+++ b/action.yml
@@ -114,7 +114,7 @@ runs:
     - name: Install planemo
       run: |
         pip install wheel ${{ inputs.planemo-version }}
-        if [ "${{ inputs.galaxy-branch }}" ]; then
+        if [[ "${{ inputs.galaxy-branch }}" != "master" ]]; then
           echo "Installing Galaxy packages from branch: ${{ inputs.galaxy-branch }}"
           base="git+https://github.com/${{ inputs.galaxy-fork }}/galaxy.git@${{ inputs.galaxy-branch }}#subdirectory=packages"
           pip install --force-reinstall "$base/util" "$base/tool_util_models" "$base/tool_util"
