--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -236,7 +236,9 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup-ci-workflows.outputs.chunk-count }}
-        galaxy-user-key: ${{ secrets.GALAXY_USER_KEY }}
+        # galaxy-user-key: ${{ secrets.GALAXY_USER_KEY }}
+      env:
+        IWC_API_KEY_USEGALAXY_EU: ${{ secrets.GALAXY_USER_KEY }}
     - uses: actions/upload-artifact@v4
       with:
         name: 'Workflow test output ${{ matrix.chunk }}'
