use structured secrets

--- a/action.yml
+++ b/action.yml
@@ -115,6 +115,7 @@ runs:
     # are not available as wheels, pip will build a wheel for them, which can be cached.
     - name: Install planemo
       run: |
+        apt install yq
         pip install wheel ${{ inputs.planemo-version }}
         # Install Galaxy packages from a custom fork/branch if specified.
         # This allows testing against Galaxy development branches or forks.
@@ -159,7 +160,7 @@ runs:
         ADDITIONAL_PLANEMO_OPTIONS: ${{ inputs.additional-planemo-options }}
         GALAXY_SLOTS: ${{ inputs.galaxy-slots }}
         TEST_TIMEOUT: ${{ inputs.test_timeout }}
-        # GALAXY_USER_KEY: ${{ inputs.galaxy-user-key }}
+        GALAXY_USER_KEY: ${{ inputs.galaxy-user-key }}
 
     - run: |
         echo 'repository-list<<EOF' >> $GITHUB_OUTPUT
